force-app/main/default/objects/MS_FSM_Work_Approvals__c/MS_FSM_Work_Approvals__c.object-meta.xml
<CustomObject>
    <description>Custom object to store records for work approvals like LOTO 480-up</description>
    <label>Work Approval</label>
    <nameField>
        <displayFormat>WA-{0000000000}</displayFormat>
        <label>Work Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>