force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/Asset_Associated_to_Service__c.field-meta.xml
<CustomField>
    <fullName>Asset_Associated_to_Service__c</fullName>
    <formula>Work_Order_Line_Item__r.Asset.Name</formula>
    <label>Asset Associated to Service</label>
    <type>Text</type>
</CustomField>