force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/MS_FSM_Approval_Time_Submitted__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Approval_Time_Submitted__c</fullName>
    <label>Approval Time Submitted</label>
    <type>DateTime</type>
</CustomField>