force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/MS_FSM_Disp_Notes_Steps_Before_Starting__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Disp_Notes_Steps_Before_Starting__c</fullName>
    <description>Field for notes from dispatcher on question: &quot;What else are you going to do before starting the LGen?&quot;</description>
    <inlineHelpText>Dispatcher notes for: &quot;What else are you going to do before starting the LGen?&quot;</inlineHelpText>
    <label>Dispatcher Notes Steps Before Starting</label>
    <type>TextArea</type>
</CustomField>