force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/MS_FSM_Dispatcher_Notes_480up_TS__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Dispatcher_Notes_480up_TS__c</fullName>
    <description>Field for notes from dispatcher on question: &quot;Did everyone discuss on the phone or in person what troubleshooting steps will be completed with 480 up?&quot;</description>
    <inlineHelpText>Dispatcher notes for: &quot;Did everyone discuss on the phone or in person what troubleshooting steps will be completed with 480 up?&quot;</inlineHelpText>
    <label>Dispatcher Notes 480up Troubleshooting</label>
    <type>TextArea</type>
</CustomField>