force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/MS_FSM_Dispatcher_Notes_Curr_Lgen_Status__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Dispatcher_Notes_Curr_Lgen_Status__c</fullName>
    <description>Field for notes from dispatcher on question: &quot;What is the current status of the LGen? (480 on / 480 off, fully assembled / disassembled, cores running / cores not running, battery cables connected / battery cables disconnected)&quot;</description>
    <inlineHelpText>Dispatcher notes for: &quot;What is the current status of the LGen? (480 on / 480 off, fully assembled / disassembled, cores running / cores not running, battery cables connected / battery cables disconnected)&quot;</inlineHelpText>
    <label>Dispatcher Notes Current Lgen Status</label>
    <type>TextArea</type>
</CustomField>