force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/MS_FSM_Dispatcher_Notes_OK_to_Start__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Dispatcher_Notes_OK_to_Start__c</fullName>
    <description>Field for dispatcher notes on question: &quot;Communicated &quot;Ok to start&quot; to FOA engineer?&quot;</description>
    <inlineHelpText>Dispatcher notes for: &quot;Communicated &quot;Ok to start&quot; to FOA engineer?&quot;</inlineHelpText>
    <label>Dispatcher Notes OK to Start</label>
    <type>TextArea</type>
</CustomField>