force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/MS_FSM_Tech_Re_Before_Starting__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Tech_Re_Before_Starting__c</fullName>
    <description>Field for reply from technician on question: &quot;What else are you going to do before starting the LGen?&quot;</description>
    <inlineHelpText>Technician response for: &quot;What else are you going to do before starting the LGen?&quot;</inlineHelpText>
    <label>Tech Response Steps Before Starting</label>
    <type>TextArea</type>
</CustomField>