force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/MS_FSM_Tech_Resp_Battery_Cable_Status__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Tech_Resp_Battery_Cable_Status__c</fullName>
    <description>Field for technician&apos;s response to question: &quot;What is the current status of the LGen? (battery cables connected/ battery cables disconnected)?</description>
    <inlineHelpText>Technician&apos;s response for: &quot;What is the current status of the LGen? (battery cables connected/ battery cables disconnected)?</inlineHelpText>
    <label>Technician Response Battery Cable Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>