force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/MS_FSM_Tech_Resp_Lgen_Assembly_Status__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Tech_Resp_Lgen_Assembly_Status__c</fullName>
    <description>Field for reply from technician on question: &quot;What is the current status of the LGen? (fully assembled / disassembled)&quot;</description>
    <inlineHelpText>Technician response: &quot;What is the current status of the LGen? (fully assembled / disassembled)&quot;</inlineHelpText>
    <label>Technician Response Lgen Assembly Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>