force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/MS_FSM_Tech_Resp_OK_to_Start__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Tech_Resp_OK_to_Start__c</fullName>
    <description>Field for reply from technician on question: &quot;Communicated &quot;Ok to start&quot; to FOA engineer?&quot;</description>
    <inlineHelpText>Technician reply for: &quot;Communicated &quot;Ok to start&quot; to FOA engineer?&quot;</inlineHelpText>
    <label>Technician Response OK to Start</label>
    <type>TextArea</type>
</CustomField>