force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/MS_FSM_Tech_Response_480_up_TS__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Tech_Response_480_up_TS__c</fullName>
    <description>Field for reply from technician on question: &quot;Did everyone discuss on the phone or in person what troubleshooting steps will be completed with 480 up?&quot;</description>
    <inlineHelpText>Technician reply for: &quot;Did everyone discuss on the phone or in person what troubleshooting steps will be completed with 480 up?&quot;</inlineHelpText>
    <label>Tech Response 480-up Troubleshooting</label>
    <type>TextArea</type>
</CustomField>