force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/MS_FSM_Tech_Response_Lgen_480_Status__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Tech_Response_Lgen_480_Status__c</fullName>
    <label>Technician Response Lgen 480 Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>