force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/MS_FSM_Technician_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Technician_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for technician&apos;s acknowledgement: &quot;I understand that I am only to complete the scope of work outlined in the troubleshooting steps&quot;</description>
    <inlineHelpText>Checkbox for technician&apos;s acknowledgement: &quot;I understand that I am only to complete the scope of work outlined in the troubleshooting steps&quot;</inlineHelpText>
    <label>Technician Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>