force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/MS_FSM_Technician_Response_Cores_Status__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Technician_Response_Cores_Status__c</fullName>
    <description>Field for technician&apos;s response to question: &quot;What is the current status of the LGen? (cores running/ cores not running)?</description>
    <inlineHelpText>Technician response: &quot;What is the current status of the LGen? (cores running/ cores not running)?</inlineHelpText>
    <label>Technician Response Cores Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>