force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/Technician_Signed__c.field-meta.xml
<CustomField>
    <fullName>Technician_Signed__c</fullName>
    <description>Technician who signed work approval</description>
    <label>Technician Signed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>