force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Approvals</relationshipLabel>
    <relationshipName>Work_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>