force-app/main/default/objects/MS_FSM_Work_Approvals__c/fields/Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated WOLI to the work approval record</description>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Work Approvals</relationshipLabel>
    <relationshipName>Work_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>